[package]
name = "kate"
version = "0.1.0"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-plonk = { path = "../plonk", default-features = false }
bls12_381 = "0.3.1"
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
getrandom = { version = "0.2", features = ["js"] }
frame-support = { version = "2.0.1", default-features = false, path = "../../frame/support" }
rand = { version = "0.7", default-features = false }
log = "0.4.8"

[features]
default = ["std"]

std = [
	"dusk-plonk/std",
	"sp-std/std",
	"getrandom/std",
	"frame-support/std"
]
