[package]
name = "dusk-plonk"
version = "0.3.6"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
           "Luke Pearson <luke@dusk.network>",
           "CPerezz <carlos@dusk.network>"]
readme = "README.md"
repository = "https://github.com/dusk-network/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
license = "MPL-2.0"
edition = "2018"

[dependencies]
merlin = "2.0.0"
rand_core = { version = "0.6" }
# Built by default with "std", "alloc", "pairing", "groups" and "endo" features.
dusk-bls12_381 = "0.3.0"
itertools = {version = "0.9", optional = true }
rayon = {version = "1.3", optional = true }
anyhow = {version = "1.0", optional = true}
rand = {version = "0.7.3", optional = true }
rand_chacha = "0.2"
dusk-jubjub = "0.5.0"
thiserror = { version = "1.0.21", optional = true }
serde = "1.0"
# Dusk related deps for WASMI serde
canonical = { version = "0.4", optional = true }
sp-std = { version = "2.0.0", path = "../../primitives/std" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = ["std"]
std = [
	"dusk-bls12_381/std",
	"dusk-jubjub/std",
	"serde/std",
	"merlin/std",
	"itertools",
	"rayon",
	"anyhow",
	"thiserror",
	"rand"
]
nightly = []
trace = []
trace-print = ["trace"]
#canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical"]
