[package]
name = "dusk-plonk"
version = "0.3.6"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
           "Luke Pearson <luke@dusk.network>",
           "CPerezz <carlos@dusk.network>"]
readme = "README.md"
repository = "https://github.com/dusk-network/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
license = "MPL-2.0"
edition = "2018"

[dependencies]
merlin = { version = "3.0.0", default-features = false }

# Built by default with "std", "alloc", "pairing", "groups" and "endo" features.
dusk-bls12_381 = { git = "https://github.com/imyourm8/bls12_381", branch = "fast_commit" }
#dusk-bls12_381 = { path = "../../../bls12_381" }
itertools = {version = "0.9", default-features = false }
rayon = {version = "1.3", default-features = false }
anyhow = {version = "1.0", default-features = false }
rand = {version = "0.8.1", default-features = false }
rand_core = {version = "0.6.1", default-features = false }
# rand_chacha = { version = "0.2", default-features = false }
dusk-jubjub = { version = "0.5.0", default-features = false}
thiserror = { version = "1.0.23", default-features = false }
serde = { version = "1.0.101", features = ["derive"] }
sp-std = { version = "3.0.0", path = "../../primitives/std", default-features = false }

# Dusk related deps for WASMI serde
canonical = { version = "0.4", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"merlin/std",
	"dusk-bls12_381/std",
	#"dusk-jubjub/std",
	"serde/std",
	"rand/std",
	"rand_core/std",
]
nightly = []
trace = []
trace-print = ["trace"]
canon = [
	"dusk-bls12_381/canon", 
	#"dusk-jubjub/canon", 
	"canonical"]
